<li>Allow configuration of alternating row colors of Chat, E-Mail, and URLs participants. Please see Options.</li>
<li>Allow configuration of the kernel's cache purge timer.</li>
<li>Allow importing of URLs without Import Credentials. Only plaintext URLs will be imported.</li>
<li>Assume zero pointer defaults in Qt::value().</li>
<li>Close progress dialogs instead of hiding them. Please see https://en.wikipedia.org/wiki/Shroedinger%27s_Cat.</li>
<li>Compute automatic digests in threads. Safely interrupt on process termination. Completed futures are occasionally removed.</li>
<li>Corrected importing of public keys. Cannot assume that key pairs exist.</li>
<li>Corrected removal of URLs having special characters.</li>
<li>Corrected use of spoton::addFriendsKey().</li>
<li>Custom status messages. A maximum of 64 characters will be imposed.</li>
<li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
<li>Digital signatures should vouch for private key information.</li>
<li>Display URL database connection information within the Search panel.</li>
<li>Do not delete URLs from shared.db unless they were properly loaded.<li>
<li>Do not initiate a rapid StarBeam if the specified participant is temporary.</li>
<li>Dual-purpose domain check boxes. Please see URLs.</li>
<li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
<li>Establish authentication and encryption keys via silent SMP. The authentication and encryption keys are derived from a Whirlpool digest of the secret.</li>
<li>Guard QList::last().</li>
<li>Guard QList::removeAt().</li>
<li>Notify the user of URL import statistics.</li>
<li>Prompt before accessing a remote URL.</li>
<li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
<li>Simplified copying and exporting of public keys.</li>
<li>Updated NTRU files (05/14/2015).</li>